# DCPulse

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: weekly-dc-pulse.yml
data/: sources.yml  topic_exclusions.yml
scripts/: deploy-update.ps1  deploy-update.sh  run-weekly.sh  setup-vm.sh
scripts/systemd/: dc-pulse.service  dc-pulse.timer
src/: __init__.py  config.py  hardening.py  main.py
src/llm/: __init__.py  article_drafts.py  generate_digest.py
src/output/: __init__.py  render_email.py  schema.py
src/pipeline/: __init__.py  cluster.py  normalize.py  rank.py  select.py  usage_history.py
src/prompts/: article_drafts.md  deep_research_seven.md  drafting.md  ideation.md  repost_copy.md  research.md  web_search_planner.md
src/research/: __init__.py  models.py  openai_web_search.py  search_planner.py  web_search.py
src/sources/: __init__.py  catalog.py  collect.py
src/voice/: profile.md
tests/: test_article_drafts_payload.py  test_openai_web_search_parse.py  test_render_drafts.py  test_schema.py  test_usage_history.py  test_web_search.py
